loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: selise-project
spec:
  type: LoadBalancer
  selector:
    app: selise-project
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
