ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: selise-project-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "ingress.selise.ch"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: selise-project
            port:
              number: 3000
